[tool.poetry]
name = "django-github-tags"
version = "1.0.0"
description = "Access to GitHub API using tags in your Django templates."
authors = ["PabloLec <pablo.lecolinet@gmail.com>"]
license = "GPL-3.0 License"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
